# slurm-openstack-tools

./: .coveragerc  .gitreview  .stestr.conf  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: check.yml
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
slurm-openstack-tools/: __init__.py
slurm_openstack_tools/: __init__.py  reboot.py  redeploy.py  resume.py  resume.py.j2  resumefail.py  sacct.py  suspend.py  suspend.py.j2  utils.py
slurm_openstack_tools/tests/: test_reboot.py  test_slurm-openstack-tools.py
