[metadata]
name = slurm-openstack-tools
summary = Tools to manage and provide functionality for Slurm clusters on OpenStack
description-file = README.rst
author = StackHPC
author-email = steveb@stackhpc.com
home-page = https://www.stackhpc.com/
project_urls = 
    Bug Tracker = https://github.com/stackhpc/slurm-openstack-tools
    Source Code = https://github.com/stackhpc/slurm-openstack-tools
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    slurm_openstack_tools

[entry_points]
console_scripts =
    slurm-openstack-rebuild = slurm_openstack_tools.reboot:main
    slurm-stats = slurm_openstack_tools.sacct:main
